         --Cut off from the previous version

         Tasks added by Ernest
            Inbound calls:
                -Added ANC connect Registration Flow (for new clients)
                -Added ANC connect Registration Flow (for Existing clients)
                -Added "Edit connect button" for changing ANC enrollment
                -Added call to Record ANC
                -Added a functionality for searching clients by ANC connect ID
                -Added "Referral to Emergency Transport" as an option in an outcome encounter
         Tasks Added by Blessings
            Generic encounter:
                -Added ANC Visit Encounter
                -Added Delivery Encounter
                -Added Birth Plan Encounter
                -Added HSA Encounter
                -Added HSA role [metadata]
                -Added migration for HSA villages
                -Added script for loading villages
                -Added Late for ANC Follow-up Call
                -Added Late for Delivery Follow-Up Call
            
-------------------------------------------------------------------------------------------------------------
2014-11-21
	DN - updated the query pulling health facilities to pull distinct facility names
	DN - updated the ANC concent number to allow 5 digits
  DN - removed G. before HSA when listing patients in ANC followup
  DN - replaced anc_visit with hsa_visit in the ancfollowuplist view.
2014-11-26
  DN - replaced '/people/villages' with '/people/villages_demographics
  DN - changed 'Home village' label to 'Current Village'
2014-11-27
  DN - added .uniq to distinctly list village names
2014-12-05
  PB - Ensured that TA is also used when searching for villages whether they are in anc connect pilot or not
2014-12-08
  PB - Modified the hsa_village script to create T/As if they dont exist in the system. This means that we will not need the hotline pilot TA
2014-12-11
  PB - Added extra logging details to TextIt integration file